<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/selector_btn"
        android:text="@string/submit"
        android:textColor="@color/black" />

</LinearLayout>