<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        layout="@layout/activity_top" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp10"
        android:ems="10"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/selector_btn"
        android:enabled="false"
        android:text="@string/log_in"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/dp8"
        android:text="@string/forgot_password" />

</LinearLayout>