<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="14dp"
    android:layout_marginStart="14dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_corners_solid_white_rect"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/btn_first"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_change_portrait_text_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_portrait_dialog_take_photo"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/sp15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/btn_second"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_change_portrait_text_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/change_portrait_dialog_select_photo"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/selector_change_portrait_text_bg"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/cancel"
        android:textColor="@color/deep_gray"
        android:textSize="@dimen/sp15" />

</LinearLayout>