<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp145" >

        <ImageView
            android:contentDescription="@string/head_img"
            android:id="@+id/img_head"
            android:layout_width="@dimen/dp55"
            android:layout_height="@dimen/dp55"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp15"
            android:src="@drawable/touxiang" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/img_head"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:textSize="@dimen/sp15" />

            <TextView
                android:id="@+id/tv_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp5"
                android:textSize="@dimen/sp15" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/call_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:text="@string/call" />

        <TextView
            android:id="@+id/messge_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:text="@string/message" />
    </LinearLayout>

</LinearLayout>