<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_line"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@drawable/border_line"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_carrier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_carrier"
            android:drawablePadding="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line" >

        <TextView
            android:id="@+id/tv_satisfaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10"
            android:text="@string/degree_of_satisfaction"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_satisfaction_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_satisfaction_title"
            android:paddingTop="@dimen/dp10" />

        <RatingBar
            android:id="@+id/room_ratingbar"
            style="@style/roomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_satisfaction_title"
            android:progress="100"
            android:stepSize="1" >
        </RatingBar>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp70"
        android:layout_margin="@dimen/dp5"
        android:background="@drawable/comment_input_bg"
        android:gravity="top"
        android:textSize="@dimen/sp15"
        android:hint="@string/comment_hint"
        android:padding="@dimen/dp10"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_margin="@dimen/dp5"
        android:background="@drawable/selector_splash_login"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>